--- a/package.json
+++ b/package.json
@@ -25,11 +25,21 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.2",
+    "@types/express-session": "^1.18.0",
     "bcryptjs": "^2.4.3",
+    "connect-redis": "^7.1.1",
+    "dotenv": "^16.4.5",
+    "express-session": "^1.18.0",
+    "ioredis": "^5.4.1",
+    "mysql2": "^3.11.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pg": "^8.12.0",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
