--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "@types/express-session": "^1.18.0",
     "bcryptjs": "^2.4.3",
     "connect-redis": "^7.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express-session": "^1.18.0",
     "ioredis": "^5.4.1",
     "mysql2": "^3.11.2",
+    "node-cron": "^3.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.12.0",
